opam-version: "2.0"
synopsis: "Multipart-form for CoHTTP"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/multipart_form"
doc: "https://dinosaure.github.io/multipart_form/"
bug-reports: "https://github.com/dinosaure/multipart_form/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "cohttp-lwt" {>= "5.3.1"}
  "multipart_form" {= version}
  "multipart_form-lwt" {= version}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/dinosaure/multipart_form.git"
