opam-version: "2.0"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/multipart_form"
bug-reports:  "https://github.com/dinosaure/multipart_form/issues"
dev-repo:     "git+https://github.com/dinosaure/multipart_form.git"
doc:          "https://dinosaure.github.io/multipart_form/"
license:      "MIT"
synopsis:     "multipart-form: RFC2183, RFC2388 & RFC7578"
description: """Implementation of RFC7578 in OCaml

Returning values from forms: multipart/form-data
"""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml"      {>= "4.07.0"}
  "dune"       {>= "2.0.0"}
  "angstrom"   {>= "0.14.0"}
  "base64"
  "unstrctrd"  {>= "0.2.0"}
  "rresult"
  "uutf"
  "pecu"       {>= "0.4"}
  "fmt"
  "alcotest"   {with-test}
]
