opam-version: "2.0"
synopsis: "Multipart-form: RFC2183, RFC2388 & RFC7578"
description: """\
Implementation of RFC7578 in OCaml

Returning values from forms: multipart/form-data"""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/multipart_form"
doc: "https://dinosaure.github.io/multipart_form/"
bug-reports: "https://github.com/dinosaure/multipart_form/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "angstrom" {>= "0.14.0"}
  "base64" {>= "3.0.0"}
  "unstrctrd" {>= "0.2"}
  "rresult"
  "uutf"
  "stdlib-shims"
  "pecu" {>= "0.4"}
  "prettym"
  "fmt" {>= "0.8.7"}
  "logs"
  "ke" {>= "0.4"}
  "alcotest" {with-test}
  "rosetta" {with-test}
  "bigarray-compat" {>= "1.0.0"}
  "bigstringaf" {>= "0.7.0"}
  "result" {>= "1.5"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/dinosaure/multipart_form.git"
