opam-version: "2.0"
synopsis: "Multipart-form: RFC2183, RFC2388 & RFC7578"
description: """\
Implementation of RFC7578 in OCaml

Returning values from forms: multipart/form-data"""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/multipart_form"
doc: "https://dinosaure.github.io/multipart_form/"
bug-reports: "https://github.com/dinosaure/multipart_form/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "angstrom" {>= "0.14.0"}
  "base64" {>= "3.0.0"}
  "unstrctrd" {>= "0.2"}
  "rresult"
  "uutf"
  "pecu" {>= "0.4"}
  "prettym"
  "fmt" {>= "0.8.7"}
  "logs"
  "ke" {>= "0.4"}
  "alcotest" {with-test}
  "rosetta" {with-test}
  "bigstringaf" {>= "0.7.0"}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/dinosaure/multipart_form.git"
pin-depends: [
  ["ke.0.99" "git+https://github.com/hannesm/ke.git#2cf90ee3a51a997e1456d0bbdc52c9cf97ceb246"]
  ["bigstringaf.0.99" "git+https://github.com/hannesm/bigstringaf.git#be6935ce3a6b6f9627a624e38937b088c12998cb"]
]
