(test
 (name test)
 (modules test)
 (libraries rosetta unstrctrd unstrctrd.parser alcotest fmt rresult result
   angstrom multipart_form))

(test
 (name test_lwt)
 (modules test_lwt)
 (libraries fmt fmt.tty logs logs.fmt alcotest alcotest-lwt lwt
   multipart_form multipart_form-lwt))

(test
 (name test_eio)
 (modules test_eio)
 (libraries fmt fmt.tty logs logs.fmt alcotest eio eio_main
   multipart_form multipart_form-eio))
